* Externalized configs * Updated XPToolsInterface * Overall improved code