@@ -5,7 +5,6 @@ import org.apache.commons.lang3.builder.ToStringStyle;
 import org.apache.logging.log4j.Level;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Optional;
 import java.util.Set;
 
@@ -14,7 +13,7 @@ import java.util.Set;
  *
  * @author martin.buchheim
  */
-public class RunConfiguration {
+public final class RunArguments {
 
   static final String DEFAULT_LIBRARY_FOLDER = "aaa_TransparentRoads4Ortho";
   static final String DEFAULT_LIBRARY_PREFIX = "transparentRoads4Ortho";
@@ -26,11 +25,11 @@ public class RunConfiguration {
   private final Path libraryPath;
   private final Path backupPath;
   private final String libraryPrefix;
-  private final Path temporariesBasePath = Paths.get(System.getProperty("user.dir")).resolve("tmp");
-  private final Path binariesPath = Paths.get(System.getProperty("user.dir")).resolve("bin");
+  private final Path temporariesBasePath = Path.of(System.getProperty("user.dir")).resolve("tmp");
+  private final Path binariesPath = Path.of(System.getProperty("user.dir")).resolve("bin");
   private final Level consoleLogLevel;
 
-  public RunConfiguration(
+  public RunArguments(
       Path xPlanePath,
       Set<Path> tilesPaths,
       Path overlaysPath,
